# IndianPines

./: .gitignore  MANIFEST.in  PKG-INFO  Readme.md  Readme_J.md  dataset.py  example.html  example.ipynb  example.py  make_datasets.ipynb  make_datasets.py  pyproject.toml  setup.py
IndianPines/: __init__.py  dataset.py  make_datasets.py
IndianPines/data/: TrainingSampleExample.csv
IndianPines/descr/: IndianPines.rst
data/: recategorize17to10.csv
data/.ipynb_checkpoints/: IndianPines-checkpoint.csv
indianpines/: __init__.py  dataset.py
indianpines/resource/: LabelsFromTIF.rst  ReduceWaterAbsorption.rst
src/IndianPines/: dataset.py
src/IndianPines/_data/: 19920612_AVIRIS_IndianPine_Site3_gr.clr
src/IndianPines/resource/: LabelsFromMAT.rst
src/IndianPines/resource/recategorize_rules/: recategorize17to10.rst
src/TokumaShimizu/: true.pgm  true_rgb.ppm
