[tool.poetry]
name = "IndianPines"
version = "0.1.1"
description = "Indian Pines datasets for scikit-learn"
authors = ["Kotaro SONODA <kotaro1976@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.8.1"
numpy = "^1.22.4"
pandas = "^1.4.2"
scikit-learn = "^1.1.1"
requests = "^2.28.0"
tqdm = "^4.64.0"
tifffile = "^2022.5.4"
scikit-image = "^0.19.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.12"
matplotlib = "^3.5.2"

#[tool.poetry-version-plugin]
#source = "init"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
