[project]
name = "IndianPines"
version = "0.1.21"
description = "Indian Pines datasets for scikit-learn"
license = "MIT"
packages = [{include="src/IndianPines"}]
exclude = ["src/IndianPines/_data"]
include = ["example.ipynb"]
authors = [
    { name = "Kotaro SONODA", email = "kotaro1976@gmail.com" }
]
dependencies = [
    "scikit-learn>=1.5.2",
    "tifffile>=2024.9.20",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "requests>=2.32.3",
    "tqdm>=4.67.0",
    "importlib>=1.0.4",
    "colormap>=1.2.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.2.2",
    "matplotlib>=3.9.2",
    "sphinx>=8.1.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/IndianPines"]
